tests/gpu_struct/compile-fail/reference_field.rs
use prgpu::gpu_struct;

#[gpu_struct]
pub struct WithRef {
    pub x: &'static f32,
}

fn main() {}
